feat: add logout feature
